--- a/styles/components/header.css
+++ b/styles/components/header.css
@@ -17,6 +17,13 @@
   text-transform: uppercase;
   letter-spacing: 2.4px;
   display: block;
+  transition: transform 0.2s ease;
 }
 
+.header-link:hover {
+  transform: scale(1.1);
+}
 
+.header-link.active-page:hover {
+  /* transform: none; */
+}
