--- a/styles/utility.css
+++ b/styles/utility.css
@@ -6,17 +6,23 @@
 }
 
 h2 {
-  font-size: var(--size-2xl);
+  font-size: var(--size-3xl);
   color: var(--clr-gray-light3);
   font-weight: 300;
 }
 
 h3 {
+  font-size: var(--size-2xl);
+  color: var(--clr-gray-light3);
+  font-weight: 300;
+}
+
+h4 {
   font-size: var(--size-base);
   font-weight: 700;
 }
 
-h4 {
+h5 {
   font-size: var(--size-xs);
   font-weight: 400;
   color: #c8c8c880;
@@ -32,6 +38,10 @@ p {
   font-size: var(--size-base);
   font-weight: 300;
   line-height: 25px;
+}
+
+.title {
+  margin: 60px 0 30px;
 }
 
 .active-page {
@@ -56,6 +66,13 @@ p {
   bottom: -8px;
 }
 
+/* SLIDER */
+.slider {
+  display: flex;
+  align-items: baseline;
+  gap: 28px;
+}
+
 .arrow-right-btn,
 .arrow-left-btn {
   display: flex;
@@ -75,6 +92,12 @@ p {
   background-color: #f9f9f9;
 }
 
+.counter {
+  display: flex;
+  gap: 12px;
+}
+
+/* BTN */
 .btn-wrapper {
   display: flex;
   align-items: center;
@@ -95,11 +118,6 @@ p {
 
 .btn-wrapper:hover .arrow {
   transform: translateX(5px);
-}
-
-.counter {
-  display: flex;
-  gap: 12px;
 }
 
 /* 2xl */
