--- a/styles/components/hero.css
+++ b/styles/components/hero.css
@@ -7,6 +7,7 @@
 .hero-btn-slider {
   display: flex;
   margin-top: 5.625rem;
+  align-items: center;
 }
 
 .hero-project-counter {
@@ -28,9 +29,8 @@
 .hero-line {
   border: 1px solid var(--clr-gray-light1);
   transform: rotate(180deg);
-  width: 365px;
+  min-width: 365px;
   height: 0px;
-  margin-top: 1.625rem;
 }
 
 .current-project-counter,
