--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,7 @@
   --clr-gray-light1: #f2f2f2;
   --clr-gray-light2: #e0e0e0;
   --clr-gray-light3: #bdbdbd;
-  --clr-gray: ##8d8d8d;
+  --clr-gray: #8d8d8d;
   --clr-graphite: #333333;
   --clr-gray-dark: #2c2c2c;
   --clr-red: #c30000;
@@ -18,8 +18,9 @@
   --size-base: 1rem;
   --size-lg: 1.375rem;
   --size-xl: 1.5rem;
-  --size-2xl: 4rem;
-  --size-3xl: 12.5rem;
+  --size-2xl: 2.5rem;
+  --size-3xl: 4rem;
+  --size-4xl: 12.5rem;
 }
 
 *,
