--- a/styles/components/main/hero.css
+++ b/styles/components/main/hero.css
@@ -14,18 +14,6 @@
   margin-top: 5.625rem;
 }
 
-.current-project-wrap {
-  display: flex;
-  flex-direction: column;
-}
-
-.border-counter {
-  margin: 0 30px 0 36px;
-  height: 44px;
-  border-right: 1px solid var(--clr-gray-light2);
-  transform: rotate(45deg);
-}
-
 .hero-line {
   border: 1px solid var(--clr-gray-light1);
   transform: rotate(180deg);
@@ -33,8 +21,7 @@
   height: 0px;
 }
 
-.current-project-counter,
-.project-counter {
+.current-project-counter {
   color: var(--clr-gray-light3);
   font-size: var(--size-xl);
 }
