--- a/styles/style.css
+++ b/styles/style.css
@@ -80,3 +80,12 @@ button {
 .section {
   margin-top: 7.5rem;
 }
+
+html.is-changing .transition-fade {
+  transition: opacity 0.25s;
+  opacity: 1;
+}
+
+html.is-animating .transition-fade {
+  opacity: 0;
+}
